contracts/program-escrow/program_claims_clean.txt
   Compiling program-escrow v0.1.0 (/home/merlinthewhiz/Documents/grainlify/contracts/program-escrow)
warning: use of deprecated method `soroban_sdk::Env::register_stellar_asset_contract`: use [Env::register_stellar_asset_contract_v2]
 --> src/pause_tests.rs:7:24
  |
7 |         let addr = env.register_stellar_asset_contract(admin.clone());
  |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(deprecated)]` on by default

warning: use of deprecated method `soroban_sdk::Env::register_contract`: use `register`
  --> src/pause_tests.rs:15:31
   |
15 |         let contract_id = env.register_contract(None, ProgramEscrowContract);
   |                               ^^^^^^^^^^^^^^^^^

warning: use of deprecated method `soroban_sdk::Env::register_contract`: use `register`
  --> src/pause_tests.rs:27:31
   |
27 |         let contract_id = env.register_contract(None, ProgramEscrowContract);
   |                               ^^^^^^^^^^^^^^^^^

warning: use of deprecated method `soroban_sdk::Env::register_contract`: use `register`
  --> src/pause_tests.rs:43:31
   |
43 |         let contract_id = env.register_contract(None, ProgramEscrowContract);
   |                               ^^^^^^^^^^^^^^^^^

warning: use of deprecated method `soroban_sdk::Env::register_contract`: use `register`
  --> src/pause_tests.rs:55:31
   |
55 |         let contract_id = env.register_contract(None, ProgramEscrowContract);
   |                               ^^^^^^^^^^^^^^^^^

warning: use of deprecated method `soroban_sdk::Env::register_contract`: use `register`
  --> src/pause_tests.rs:72:31
   |
72 |         let contract_id = env.register_contract(None, ProgramEscrowContract);
   |                               ^^^^^^^^^^^^^^^^^

warning: use of deprecated method `soroban_sdk::Env::register_contract`: use `register`
 --> src/claim_tests.rs:8:27
  |
8 |     let contract_id = env.register_contract(None, ProgramEscrowContract);
  |                           ^^^^^^^^^^^^^^^^^

error[E0599]: no method named `init_program` found for struct `ProgramEscrowContractClient<'a>` in the current scope
   --> src/claim_tests.rs:16:14
    |
 16 |     contract.init_program(
    |     ---------^^^^^^^^^^^^
    |
   ::: src/lib.rs:723:1
    |
723 | #[contract]
    | ----------- method `init_program` not found for this struct
    |
help: there is a method `initialize_program` with a similar name
    |
 16 |     contract.initialize_program(
    |                  ++++++

error[E0599]: no method named `with_mut` found for struct `soroban_sdk::ledger::Ledger` in the current scope
   --> src/claim_tests.rs:74:18
    |
 74 |     env.ledger().with_mut(|l| l.sequence_number = 20);
    |                  ^^^^^^^^ method not found in `soroban_sdk::ledger::Ledger`
    |
   ::: /home/merlinthewhiz/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/soroban-sdk-22.0.9/src/testutils.rs:284:8
    |
284 |     fn with_mut<F>(&self, f: F)
    |        -------- the method is available for `soroban_sdk::ledger::Ledger` here
    |
    = help: items from traits can only be used if the trait is in scope
help: trait `Ledger` which provides `with_mut` is implemented but not in scope; perhaps you want to import it
    |
  3 + use soroban_sdk::testutils::Ledger;
    |

warning: use of deprecated method `soroban_sdk::Env::register_stellar_asset_contract`: use [Env::register_stellar_asset_contract_v2]
    --> src/lib.rs:2621:33
     |
2621 |         let token_address = env.register_stellar_asset_contract(admin.clone());
     |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: use of deprecated method `soroban_sdk::Env::register_contract`: use `register`
    --> src/lib.rs:2668:31
     |
2668 |         let contract_id = env.register_contract(None, ProgramEscrowContract);
     |                               ^^^^^^^^^^^^^^^^^

warning: use of deprecated method `soroban_sdk::Env::register_contract`: use `register`
    --> src/lib.rs:2710:31
     |
2710 |         let contract_id = env.register_contract(None, ProgramEscrowContract);
     |                               ^^^^^^^^^^^^^^^^^

warning: use of deprecated method `soroban_sdk::Env::register_contract`: use `register`
    --> src/lib.rs:2775:31
     |
2775 |         let contract_id = env.register_contract(None, ProgramEscrowContract);
     |                               ^^^^^^^^^^^^^^^^^

warning: use of deprecated method `soroban_sdk::Env::register_contract`: use `register`
    --> src/lib.rs:2831:31
     |
2831 |         let contract_id = env.register_contract(None, ProgramEscrowContract);
     |                               ^^^^^^^^^^^^^^^^^

warning: use of deprecated method `soroban_sdk::Env::register_contract`: use `register`
    --> src/lib.rs:2876:31
     |
2876 |         let contract_id = env.register_contract(None, ProgramEscrowContract);
     |                               ^^^^^^^^^^^^^^^^^

warning: use of deprecated method `soroban_sdk::Env::register_contract`: use `register`
    --> src/lib.rs:2952:31
     |
2952 |         let contract_id = env.register_contract(None, ProgramEscrowContract);
     |                               ^^^^^^^^^^^^^^^^^

warning: use of deprecated method `soroban_sdk::Env::register_contract`: use `register`
    --> src/lib.rs:3039:31
     |
3039 |         let contract_id = env.register_contract(None, ProgramEscrowContract);
     |                               ^^^^^^^^^^^^^^^^^

warning: use of deprecated method `soroban_sdk::Env::register_contract`: use `register`
    --> src/lib.rs:3065:31
     |
3065 |         let contract_id = env.register_contract(None, ProgramEscrowContract);
     |                               ^^^^^^^^^^^^^^^^^

warning: use of deprecated method `soroban_sdk::Env::register_contract`: use `register`
    --> src/lib.rs:3110:31
     |
3110 |         let contract_id = env.register_contract(None, ProgramEscrowContract);
     |                               ^^^^^^^^^^^^^^^^^

warning: use of deprecated method `soroban_sdk::Env::register_contract`: use `register`
    --> src/lib.rs:3128:31
     |
3128 |         let contract_id = env.register_contract(None, ProgramEscrowContract);
     |                               ^^^^^^^^^^^^^^^^^

warning: use of deprecated method `soroban_sdk::Env::register_contract`: use `register`
    --> src/lib.rs:3142:31
     |
3142 |         let contract_id = env.register_contract(None, ProgramEscrowContract);
     |                               ^^^^^^^^^^^^^^^^^

warning: use of deprecated method `soroban_sdk::Env::register_contract`: use `register`
    --> src/lib.rs:3159:31
     |
3159 |         let contract_id = env.register_contract(None, ProgramEscrowContract);
     |                               ^^^^^^^^^^^^^^^^^

warning: use of deprecated method `soroban_sdk::Env::register_contract`: use `register`
    --> src/lib.rs:3183:31
     |
3183 |         let contract_id = env.register_contract(None, ProgramEscrowContract);
     |                               ^^^^^^^^^^^^^^^^^

warning: use of deprecated method `soroban_sdk::Env::register_contract`: use `register`
    --> src/lib.rs:3220:31
     |
3220 |         let contract_id = env.register_contract(None, ProgramEscrowContract);
     |                               ^^^^^^^^^^^^^^^^^

warning: use of deprecated method `soroban_sdk::Env::register_contract`: use `register`
    --> src/lib.rs:3243:31
     |
3243 |         let contract_id = env.register_contract(None, ProgramEscrowContract);
     |                               ^^^^^^^^^^^^^^^^^

warning: use of deprecated method `soroban_sdk::Env::register_contract`: use `register`
    --> src/lib.rs:3265:31
     |
3265 |         let contract_id = env.register_contract(None, ProgramEscrowContract);
     |                               ^^^^^^^^^^^^^^^^^

warning: use of deprecated method `soroban_sdk::Env::register_contract`: use `register`
    --> src/lib.rs:3288:31
     |
3288 |         let contract_id = env.register_contract(None, ProgramEscrowContract);
     |                               ^^^^^^^^^^^^^^^^^

warning: use of deprecated method `soroban_sdk::Env::register_contract`: use `register`
    --> src/lib.rs:3307:31
     |
3307 |         let contract_id = env.register_contract(None, ProgramEscrowContract);
     |                               ^^^^^^^^^^^^^^^^^

warning: use of deprecated method `soroban_sdk::Env::register_contract`: use `register`
    --> src/lib.rs:3335:31
     |
3335 |         let contract_id = env.register_contract(None, ProgramEscrowContract);
     |                               ^^^^^^^^^^^^^^^^^

warning: use of deprecated method `soroban_sdk::Env::register_contract`: use `register`
    --> src/lib.rs:3359:31
     |
3359 |         let contract_id = env.register_contract(None, ProgramEscrowContract);
     |                               ^^^^^^^^^^^^^^^^^

warning: use of deprecated method `soroban_sdk::Env::register_contract`: use `register`
    --> src/lib.rs:3380:31
     |
3380 |         let contract_id = env.register_contract(None, ProgramEscrowContract);
     |                               ^^^^^^^^^^^^^^^^^

warning: use of deprecated method `soroban_sdk::Env::register_contract`: use `register`
    --> src/lib.rs:3401:31
     |
3401 |         let contract_id = env.register_contract(None, ProgramEscrowContract);
     |                               ^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0599`.
warning: `program-escrow` (lib test) generated 30 warnings
error: could not compile `program-escrow` (lib test) due to 2 previous errors; 30 warnings emitted
